Sat Sep 21 23:53 2013 CDT
    * lib/playlist.js, www/assets/js/player.js: Modify the server lead
      function to have a 3 second lead-in period (to allow buffering).
      Videos start at -3 seconds; the client is paused until the time
      reaches 0 seconds.

Sat Sep 21 02:21 2013 CDT
    * www/assets/js/ui.js, www/assets/js/ui.js, www/assets/js/util.js,
      www/channel.html, www/assets/css/ytsync.css: Add quick buttons for
      modflair and adminflair

Sat Sep 21 00:29 2013 CDT
    * www/assets/js/util.js: support a "Nobody" permission level (set
      arbitrarily high)

Sat Sep 21 00:23 2013 CDT
    * www/assets/js/callbacks.js, www/assets/css/ytsync.css: make it more
      obvious which option was voted for

Sat Sep 21 00:08 2013 CDT
    * lib/playlist.js: Make .clean(filter) an instance method
    * lib/chatcommand.js: Make a few minor changes to unbibium's /clean

Wed Sep 18 18:26 2013 CDT
    * lib/user.js: Change channel checks to include checking for whether
      the channel is dead

Wed Sep 18 18:14 2013 CDT
    * lib/channel.js: Add a bunch of checks to prevent callbacks from doing
      things with a dead channel
    * tests/channelDeadRace.js: Add a few client tests that cause exceptions
      in the pre-patched channel code

Tue Sep 17 22:24 2013 CDT
    * lib/user.js: Fix what I assume was a race condition that caused an error message
      when a user's login callback fired after the channel unloaded.

Tue Sep 17 13:16 2013 CDT
    * lib/get-info.js: Fix ustream for channels that have /channel/ in the
      path.

Fri Sep 13 10:10 2013 CDT
    * www/reset.html: Fix data.js dependency
    * lib/api.js: Fix ActionLog trying to record wrong data.  How long has
      this been broken?
    * www/assets/js/acp.js: Prepend "/reset.html?" in case admins can't
      remember what the URL is

Thu Sep 12 18:41 2013 CDT
    * www/index.html: Fix index page not showing public channels

Thu Sep 12 16:25 2013 CDT