@@ -326,6 +326,7 @@ User.prototype.initCallbacks = function() {
                 searchfn(data.query.split(" "), function (e, vids) {
                     if(!e) {
                         self.socket.emit("searchResults", {
+                            source: "yt",
                             results: vids
                         });
                     }
@@ -333,6 +334,7 @@ User.prototype.initCallbacks = function() {
             } else {
                 self.channel.search(data.query, function (vids) {
                     self.socket.emit("searchResults", {
+                        source: "library",
                         results: vids
                     });
                 });
