@@ -1,3 +1,12 @@
+Mon Sep 23 16:22 2013 CDT
+    * lib/user.js: distinguish search result return packets with a 'source'
+      field that specifies where the item came from (e.g 'yt' for youtube
+      search, 'library' for library search)
+    * www/assets/js/callbacks.js: account for the change in lib/user.js
+      which adds a 'source' field to library search results
+    * www/assets/js/util.js: don't add delete buttons for youtube search
+      results.  Apparently people keep clicking them...
+
 Sat Sep 21 23:53 2013 CDT
     * lib/playlist.js, www/assets/js/player.js: Modify the server lead
       function to have a 3 second lead-in period (to allow buffering).
